# native

./: .env.production  .gitignore  README.md  env.sample  index.html  package.json  start.bat
documents/: korean.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: discord.rs  download.rs  main.rs
src/components/: titlebar.tsx
src/components/cart/: item.tsx  purchase.tsx  success.tsx
src/components/global/: console.tsx  contextMenu.tsx  modal.tsx  undertale.tsx
src/components/layout/: browser.tsx  layout.tsx
src/components/product/: contents.tsx  genre.tsx  remote.tsx  tabs.tsx
src/components/product/evaluation/: comments.tsx  evaluation.tsx  userEvaluation.tsx
src/components/product/evaluation/opencritic/: bedges.tsx  openCritic.tsx  score.tsx
src/components/product/languages/: languages.tsx
src/components/product/relates/: games.tsx  relate.tsx
src/components/product/system/: system.tsx
src/components/store/: banner.tsx  product.tsx  section.tsx  top-menu-avatar-buttons.tsx  top-menu.tsx
src/pages/404/: notFound.tsx
src/pages/cart/: cart.tsx
src/pages/loading/: loading.tsx
src/pages/login/: login.tsx
src/pages/store/: product.tsx  store.tsx
src/styles/cart/: cart.scss  successed.scss
src/styles/global/: global.scss  layout.scss
src/styles/loading/: loading.scss
src/styles/login/: login.scss
src/styles/notfound/: notfound.scss
src/styles/store/: product.scss  store-theme.scss  store.scss
src/util/api/: odin-api.ts
src/util/redux/: store.ts
src/util/redux/reducer/: modal.reducer.ts  root.ts  user.reducer.ts
