[package]
name = "odin-native"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-hide", "window-maximize", "window-unminimize", "window-minimize", "window-unmaximize", "window-close", "window-start-dragging", "window-show", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
declarative-discord-rich-presence = { git = "https://github.com/KPidS/declarative-discord-rich-presence" }
serde_json = "1.0"
config = "0.14.0"
log = "0.4.20"
once_cell = "1.19.0"
dotenv = "0.15.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
