[package]
name = "odin-native"
version = "0.0.0"
description = "A Tauri App"
authors = ["Damie Original Series"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6.1", features = [ "window-all", "os-all", "fs-all", "path-all", "dialog-all", "http-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
declarative-discord-rich-presence = { git = "https://github.com/odin-store/declarative-discord-rpc" }
serde_json = "1.0"
config = "0.14.0"
log = "0.4.20"
once_cell = "1.19.0"
dotenvs = "0.1.0"
reqwest = {version="0.12.2", features= ["stream"] }
tokio = "1.37.0"
futures-util = "0.3.30"

[dev-dependencies]
tauri-bundler = "1.5.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
